--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -4,11 +4,15 @@
   "description": "A Simple IoT Platform - DB Module",
   "main": "index.js",
   "scripts": {
+    "setup": "DEBUG=platziverse:* node setup.js",
     "lint": "standard --fix"
   },
   "author": "Gerlis Álvarez C. <gerlis1997@gmail.com> (https://github.com/gerlis18)",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.1",
+    "debug": "^3.1.0",
+    "inquirer": "^6.0.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.10",
